objects/TASKRAY__Project__c.object
<CustomObject>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <inlineHelpText>The current stage of a sub-project. This field must be updated as projects mature from one stage to another.</inlineHelpText>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Protocol Development Queue</fullName>
                </value>
                <value>
                    <fullName>Protocol Development</fullName>
                </value>
                <value>
                    <fullName>Library Queue</fullName>
                </value>
                <value>
                    <fullName>Library Production</fullName>
                </value>
                <value>
                    <fullName>Pre-Production</fullName>
                </value>
                <value>
                    <fullName>Configuration Queue</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Ontology</fullName>
                </value>
                <value>
                    <fullName>Custom Deliverables</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountID__c</fullName>
        <formula>TASKRAY__trAccount__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archived_Date__c</fullName>
        <label>Archived Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archived_Reason__c</fullName>
        <label>Archived Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete: Delivered (modified from original scope)</fullName>
                </value>
                <value>
                    <fullName>Complete: Delivered feasibility assessment</fullName>
                </value>
                <value>
                    <fullName>Discontinued: Client strategy change</fullName>
                </value>
                <value>
                    <fullName>Discontinued: Infeasible timeline</fullName>
                </value>
                <value>
                    <fullName>Discontinued: Strategic internal decision</fullName>
                </value>
                <value>
                    <fullName>Contract Terminated</fullName>
                </value>
                <value>
                    <fullName>Contract Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_for_Digitization_After_FT__c</fullName>
        <inlineHelpText>The number of references assigned to enter digitization.</inlineHelpText>
        <label># Assigned for Digitization (After FT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_for_Full_Text_Screening__c</fullName>
        <inlineHelpText>The number of references accepted after full-text screening.</inlineHelpText>
        <label># Assigned for Full Text Screening</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Dir_Library_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of Library Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects7njs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub-Project field to be used when a Project spans across multiple opportunities.</description>
        <inlineHelpText>The original opportunity a sub-project is associated with (if it is tied to a legacy opportunity and new opportunity).</inlineHelpText>
        <label>Associated Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TaskRay Projects (Associated Opportunity)</relationshipLabel>
        <relationshipName>TaskRay_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Better_Inform_Clinical_Development__c</fullName>
        <description>Better Inform Clinical Development for More Appropriate Development.</description>
        <inlineHelpText>Better Inform Clinical Development for More Appropriate Development.</inlineHelpText>
        <label>Better Inform Clinical Development</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shape clinical development strategy</fullName>
                </value>
                <value>
                    <fullName>Novel target discovery</fullName>
                </value>
                <value>
                    <fullName>Target unmet need</fullName>
                </value>
                <value>
                    <fullName>Reduced study size &amp; duration</fullName>
                </value>
                <value>
                    <fullName>Optimized recruitment</fullName>
                </value>
                <value>
                    <fullName>Identify sub group of populations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chief Medical Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects7nji</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Work_Type__c</fullName>
        <inlineHelpText>Description of type of work (de novo, add-on, or modified, etc.).</inlineHelpText>
        <label>Case Work Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>New Project</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>PICO Modification(s)</fullName>
                </value>
                <value>
                    <fullName>Additional Data Extraction</fullName>
                </value>
                <value>
                    <fullName>Additional Deliverable(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>TaskRay_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Accepted_Date__c</fullName>
        <inlineHelpText>The date on which a client accepts their deliverable(s) as final (requiring no further modification).</inlineHelpText>
        <label>Client Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Deliverable__c</fullName>
        <inlineHelpText>The format(s) in which a opportunityed Service is being delivered. Please select multiple if a client is receiving multiple deliverables for a given sub-project. This field does not need to be 1:1 for a given sub-project.</inlineHelpText>
        <label>Client Deliverable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abstract</fullName>
                </value>
                <value>
                    <fullName>Analysis File</fullName>
                </value>
                <value>
                    <fullName>Evidence Table</fullName>
                </value>
                <value>
                    <fullName>Manuscript</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Oral Presentation</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Powerpoint File (interim/final deliverable)</fullName>
                    <label>Powerpoint File</label>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>Typed Report (interim/final deliverable)</fullName>
                </value>
                <value>
                    <fullName>Publication (incl. abstract, poster, manuscript, draft/final)</fullName>
                    <isActive>false</isActive>
                    <label>Publication</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Delivered_Date__c</fullName>
        <inlineHelpText>The earliest date on which a client is sent their final deliverable(s).</inlineHelpText>
        <label>Client Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Feedback_Requested_Date__c</fullName>
        <label>Client Feedback Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Feedback_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Feedback Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Kick_Off_Meeting_Scheduled__c</fullName>
        <inlineHelpText>The date on which the client kick off meeting was scheduled</inlineHelpText>
        <label>Client Kick Off Meeting Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Kick_Off_Meeting__c</fullName>
        <inlineHelpText>The date on which the client kick off meeting actually occurred</inlineHelpText>
        <label>Client Kick Off Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Services_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Formerly: Client Services Rep</description>
        <inlineHelpText>The Associate Account Director assigned to the project or sub-project</inlineHelpText>
        <label>Associate Account Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comparison__c</fullName>
        <inlineHelpText>The compatators of interest for the intervention/exposure of interest</inlineHelpText>
        <label>Comparison</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complexity_of_Topic__c</fullName>
        <label>Complexity of Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulting_Services_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User responsible for performing any analyses for this sub-project.</inlineHelpText>
        <label>Analytics Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulting_Services_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statistician</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TaskRay Projects (Contact #2)</relationshipLabel>
        <relationshipName>TaskRay_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact #3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TaskRay Projects (Contact #3)</relationshipLabel>
        <relationshipName>TaskRay_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Name - Filtered by Related Account</description>
        <inlineHelpText>The primary client propositioning or sponsoring this project. This field should be consistent for all sub-projects underneath a parent project.</inlineHelpText>
        <label>Primary Contact Name</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Contact must be associated to the assigned Account &amp; must have their contact type set to 'Project'</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.TASKRAY__trAccount__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_Type__c</field>
                <operation>equals</operation>
                <value>Project</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>TaskRay_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Archive_14_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Archive 14 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Archive_1_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Archive 1 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <formula>TASKRAY__trOpportunity__r.Contract_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Service__c</fullName>
        <inlineHelpText>Service provided by DRE. Each sub-project must only have a single opportunityed service. All tasks associated with this sub-project should reflect the steps required to completing this service. If a parent project requires multiple opportunityed services,</inlineHelpText>
        <label>Contracted Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor Label Review</fullName>
                </value>
                <value>
                    <fullName>Documents &amp; Publications</fullName>
                </value>
                <value>
                    <fullName>Economic Assessment</fullName>
                </value>
                <value>
                    <fullName>Meta-Analysis or Network Meta-Analysis</fullName>
                </value>
                <value>
                    <fullName>Other analysis or statistical work</fullName>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>Systematic Literature Review</fullName>
                </value>
                <value>
                    <fullName>Focused Literature Review</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Clinical Program Analytics</fullName>
                </value>
                <value>
                    <fullName>Medical Writing and Communications</fullName>
                </value>
                <value>
                    <fullName>Competitor Label Review | Focused Literature Review</fullName>
                    <isActive>false</isActive>
                    <label>Competitor Label Review | Focused Literature Review</label>
                </value>
                <value>
                    <fullName>Competitor Label Review | Focused Literature Review | Systematic Literature Review</fullName>
                    <isActive>false</isActive>
                    <label>Competitor Label Review | Focused Literature Review | Systematic Literature Review</label>
                </value>
                <value>
                    <fullName>Documents &amp; Publications | Focused Literature Review</fullName>
                    <isActive>false</isActive>
                    <label>Documents &amp; Publications | Focused Literature Review</label>
                </value>
                <value>
                    <fullName>Documents &amp; Publications | Meta-Analysis or Network Meta-Analysis</fullName>
                    <isActive>false</isActive>
                    <label>Documents &amp; Publications | Meta-Analysis or Network Meta-Analysis</label>
                </value>
                <value>
                    <fullName>Documents &amp; Publications | Meta-Analysis or Network Meta-Analysis | Systematic Literature Review</fullName>
                    <isActive>false</isActive>
                    <label>Documents &amp; Publications | Meta-Analysis or Network Meta-Analysis | Systematic Literature Review</label>
                </value>
                <value>
                    <fullName>Documents &amp; Publications | Other analysis or statistical work | Systematic Literature Review</fullName>
                    <isActive>false</isActive>
                    <label>Documents &amp; Publications | Other analysis or statistical work | Systematic Literature Review</label>
                </value>
                <value>
                    <fullName>Focused Literature Review | Meta-Analysis or Network Meta-Analysis</fullName>
                    <isActive>false</isActive>
                    <label>Focused Literature Review | Meta-Analysis or Network Meta-Analysis</label>
                </value>
                <value>
                    <fullName>Focused Literature Review | Other analysis or statistical work</fullName>
                    <isActive>false</isActive>
                    <label>Focused Literature Review | Other analysis or statistical work</label>
                </value>
                <value>
                    <fullName>Focused Literature Review | Rapid Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Focused Literature Review | Rapid Assessment</label>
                </value>
                <value>
                    <fullName>Focused Literature Review | Rapid Assessment | Systematic Literature Review</fullName>
                    <isActive>false</isActive>
                    <label>Focused Literature Review | Rapid Assessment | Systematic Literature Review</label>
                </value>
                <value>
                    <fullName>Medical Writing and Communications |  Meta-Analysis or Network Meta-Analysis</fullName>
                    <isActive>false</isActive>
                    <label>Medical Writing and Communications |  Meta-Analysis or Network Meta-Analysis</label>
                </value>
                <value>
                    <fullName>Meta-Analysis or Network Meta-Analysis | Other analysis or statistical work</fullName>
                    <isActive>false</isActive>
                    <label>Meta-Analysis or Network Meta-Analysis | Other analysis or statistical work</label>
                </value>
                <value>
                    <fullName>Meta-Analysis or Network Meta-Analysis | Other analysis or statistical work | Systematic Literature Review</fullName>
                    <isActive>false</isActive>
                    <label>Meta-Analysis or Network Meta-Analysis | Other analysis or statistical work | Systematic Literature Review</label>
                </value>
                <value>
                    <fullName>Meta-Analysis or Network Meta-Analysis | Systematic Literature Review</fullName>
                    <isActive>false</isActive>
                    <label>Meta-Analysis or Network Meta-Analysis | Systematic Literature Review</label>
                </value>
                <value>
                    <fullName>Other analysis or statistical work | Rapid Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Other analysis or statistical work | Rapid Assessment</label>
                </value>
                <value>
                    <fullName>Other analysis or statistical work | Systematic Literature Review</fullName>
                    <isActive>false</isActive>
                    <label>Other analysis or statistical work | Systematic Literature Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Image__c</fullName>
        <description>Corporate Image for Transversal Contributions.</description>
        <inlineHelpText>Corporate Image for Transversal Contributions.</inlineHelpText>
        <label>Corporate Image</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive advantage</fullName>
                </value>
                <value>
                    <fullName>Scientific / tech leadership</fullName>
                </value>
                <value>
                    <fullName>Data driven company</fullName>
                </value>
                <value>
                    <fullName>Ethics / transparency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <inlineHelpText>Select from the available levels of client satisfaction to most accurately reflect the feedback that has been received directly from the client sponsor of the work.</inlineHelpText>
        <label>Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied - Project Closed</fullName>
                </value>
                <value>
                    <fullName>Satisfied - New Follow-On Work</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied - Revisions Required</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied - Project Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__c</fullName>
        <description>DRE comments to support Overall Project Satisfaction.</description>
        <inlineHelpText>DRE comments to support Overall Project Satisfaction.</inlineHelpText>
        <label>DRE Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Integrity_TL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Integrity Team Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects7nkg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Database_Deadline__c</fullName>
        <inlineHelpText>The date on which the database for this sub-project is due to the client.</inlineHelpText>
        <label>Database Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Database_Name__c</fullName>
        <inlineHelpText>The name of new or existing databases for a given project.</inlineHelpText>
        <label>Database Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverable_Components__c</fullName>
        <label>Deliverable Components</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not at all</fullName>
                </value>
                <value>
                    <fullName>2 - Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3 - Neutral</fullName>
                </value>
                <value>
                    <fullName>4 - Satisfactory</fullName>
                </value>
                <value>
                    <fullName>5 - Completely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliverable_Deadline_Date__c</fullName>
        <inlineHelpText>The date on which the opportunityed service for this sub-project is due to the client.</inlineHelpText>
        <label>Deliverable Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverable_Satisfaction__c</fullName>
        <label>Deliverable Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not at all satisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Not satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Neutral</fullName>
                </value>
                <value>
                    <fullName>4 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Very Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digitized__c</fullName>
        <inlineHelpText>[Calculated field] The number of junction kbases associated with a sub-project that are not rejected (i.e. the current number of references accepted during digitization).</inlineHelpText>
        <label># Digitized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Volume_of_Data_Configuration__c</fullName>
        <inlineHelpText>The estimated number of references to be digitized.</inlineHelpText>
        <label>Estimated Volume of Data Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>1 - Low (&lt;15 studies)</fullName>
                </value>
                <value>
                    <fullName>2 - Medium (16-50 studies)</fullName>
                </value>
                <value>
                    <fullName>3 - High (51-100 studies)</fullName>
                </value>
                <value>
                    <fullName>4 - Very High (&gt;100 studies)</fullName>
                </value>
                <value>
                    <fullName>Needs Assessing</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Volume_of_Literature__c</fullName>
        <inlineHelpText>The estimated number of references to be retrieved from the search.</inlineHelpText>
        <label>Estimated Volume of Literature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1,000</fullName>
                </value>
                <value>
                    <fullName>1,001-2,500</fullName>
                </value>
                <value>
                    <fullName>2,501-5,000</fullName>
                </value>
                <value>
                    <fullName>&gt;5,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extraction_TL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Formerly, Extraction Team Lead</description>
        <inlineHelpText>The primary user managing timelines &amp; resources for the project.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects7nkv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FQ_ID__c</fullName>
        <inlineHelpText>The LMS Framed Question ID housing references to be digitized. This field is required for any sub-project tracking EOD or data extraction (i.e. any sub-project with Junction Kbases).</inlineHelpText>
        <label>FQ ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GH_QMI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GH QMI</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects7nlK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Governance_Category__c</fullName>
        <inlineHelpText>For Sanofi projects, select the type of project based on whether the project requires Study Review Committee governance steps or other review.</inlineHelpText>
        <label>Governance Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bibliographic</fullName>
                </value>
                <value>
                    <fullName>Internal Strategy (Research)</fullName>
                </value>
                <value>
                    <fullName>Potential Publication (Research)</fullName>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_of_Analytics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Formerly, Head of Analytics</description>
        <inlineHelpText>User responsible for reviewing any analyses for this sub-project.</inlineHelpText>
        <label>Analytics Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects7nlA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Head_of_Clinical_Operations_and_Data_Int__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of Clinical Ops and Data Integrity</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_ProjectsKeMb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Improved_Clinical_Trial_Success_Rates__c</fullName>
        <description>Improved Clinical Trial Success Rates for More Appropriate Development.</description>
        <inlineHelpText>Improved Clinical Trial Success Rates for More Appropriate Development.</inlineHelpText>
        <label>Improved Clinical Trial Success Rates</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Higher % of responders</fullName>
                </value>
                <value>
                    <fullName>Quicker response</fullName>
                </value>
                <value>
                    <fullName>Better response magnitude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>